exports[`test splits the path into 3 when crossing from the bottom 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        0,
        20,
      ],
      Array [
        0,
        10,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        0,
        10,
      ],
      Array [
        0,
        -10,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        0,
        -10,
      ],
      Array [
        0,
        -20,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the bottom far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        0,
        520,
      ],
      Array [
        0,
        510,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        0,
        510,
      ],
      Array [
        0,
        490,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        0,
        490,
      ],
      Array [
        0,
        480,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the left 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        20,
        0,
      ],
      Array [
        10,
        0,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        10,
        0,
      ],
      Array [
        -10,
        0,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        -10,
        0,
      ],
      Array [
        -20,
        0,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the left far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        520,
        0,
      ],
      Array [
        510,
        0,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        510,
        0,
      ],
      Array [
        490,
        0,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        490,
        0,
      ],
      Array [
        480,
        0,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the right 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        -20,
        0,
      ],
      Array [
        -10,
        0,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        -10,
        0,
      ],
      Array [
        10,
        0,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        10,
        0,
      ],
      Array [
        20,
        0,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the right far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        480,
        0,
      ],
      Array [
        490,
        0,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        490,
        0,
      ],
      Array [
        510,
        0,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        510,
        0,
      ],
      Array [
        520,
        0,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the top 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        0,
        -20,
      ],
      Array [
        0,
        -10,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        0,
        -10,
      ],
      Array [
        0,
        10,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        0,
        10,
      ],
      Array [
        0,
        20,
      ],
    ],
  },
]
`;

exports[`test splits the path into 3 when crossing from the top far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Array [
        0,
        480,
      ],
      Array [
        0,
        490,
      ],
    ],
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Array [
        0,
        490,
      ],
      Array [
        0,
        510,
      ],
    ],
  },
  Object {
    "points": Array [
      Array [
        0,
        510,
      ],
      Array [
        0,
        520,
      ],
    ],
  },
]
`;
